src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;

  --color-neutral-100: #f2f4ff;
  --color-neutral-300: #6c756b;

  --color-primary: #a371ff;
  --color-secondary: #e85d75;
  --color-green: #00c853;

  --color-bg: #02111b;
}

/* CSS Reset */
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font: inherit;
}

a {
  color: inherit;
  text-decoration: inherit;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: var(--color-neutral-100);
  background-color: var(--color-bg);
  display: grid;
  place-items: center;
  min-height: 100dvh;
}

